2007-08-16  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	* help/.cvsignore:
	* help/manual/.cvsignore:
	* help/manual/C/.cvsignore:
	  Get rid of cvsignore files.

2007-08-14  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Don't die when encountering #if/#endif in enums. Fixes #324535.

2007-08-14  Stefan Kost  <ensonic@users.sf.net>

	patch by: Frederic Peters <fpeters@0d.be>

	* style.css:
	  Styling hr tags.

2007-08-14  Stefan Kost  <ensonic@users.sf.net>

	* help/manual/C/gtk-doc-manual.xml:
	  Document new features and bump version.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix the funny side-effect of last 'broken-returns' fix.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/src/tester.h:
	  Really fix #460127.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Now the 'broken' returns seems to work better. Fixes #380824 more.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c (bug_379466, bug_380824):
	* tests/bugs/src/tester.h (test):
	  New test.
	* tests/gtkdoctest.sh:
	  Fix bashism.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Add another test for a bug we fixed with the changes below.
	  Fixes #460127.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Improved scan logic. Fixes #411739.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/src/tester.h:
	  Handle newline in declarations better. Fixes #379466.
	  Ensure space in multiline declarations when removing the newline.
	  Fix missing argument docs in template free build.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>
