@@ -1,3 +1,12 @@
+2007-08-21  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtk-doc.make:
+	* gtk-doc.notmpl.make:
+	  Make use of rebase if possible. Fixes #465920
+
+	* gtkdoc-rebase.in:
+	  Rebase improvements and fixes.	  
+
 2007-08-16  Stefan Kost  <ensonic@users.sf.net>
 
 	* .cvsignore:
